# git-annex-remote-synology

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
git_annex_remote_synology/: __main__.py  credentials.py  nas.py  run.py  synology_remote.py
