[tool.poetry]
name = "git_annex_remote_synology"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
annexremote = "^1.6.5"
keyring = "^25.2.0"
appdirs = "^1.4.4"
backoff = "^2.2.1"
tqdm = "^4.66.4"
synology-api = "^0.7.2"

[tool.poetry.scripts]
git-annex-remote-synology = "git_annex_remote_synology.run:main"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
